--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,7 @@
+@import './buttons.css';
+@import './inputs.css';
+@import './modals.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
